# beamclean

./: .gitignore  beam_clean.py  pii.py  pyproject.toml  ruff.toml
config/: main.yaml
config/beam_clean/: s.yaml
config/data/: default.yaml  dp.yaml  hellaswag.yaml  mrpc.yaml  open_orca_big.yaml  open_orca_small.yaml  papillon.yaml
config/privacy/: privacy_config_llama3.yaml  privacy_config_llama3_gpt2.yaml
scripts/: beam_clean_decode.sh  beam_clean_gaussian_mrpc.sh  beam_clean_gaussian_with_mean.sh  beam_clean_sweep.sh  beamclean.sh  beamclean_different.sh  beamclean_l1_laplace.sh  trial.sh
src/: nearest_neighbor.py
src/beamclean/: legacy.py  scorer.py  surrogate.py  trainer.py  utils.py
src/dataset/: __init__.py  base_dataset.py  data_loader.py  embedding_dataset.py  hellaswag.py  load_dataset.py  mrpc.py  noise_mechanisms.py  openorca.py  papillon.py  sample.py  sample_noise.py  utils.py
src/models/: __init__.py  prior_model.py  surrogate_model.py  utils.py
src/utils/: metrics.py
tests/dataset/: test_dataset.py
